--- a/UI/ColorVision.Themes/Themes/Menu.xaml
+++ b/UI/ColorVision.Themes/Themes/Menu.xaml
@@ -234,6 +234,10 @@
 
     <Style x:Key="{x:Type MenuItem}" TargetType="{x:Type MenuItem}">
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+
         <Setter Property="Template" Value="{DynamicResource {ComponentResourceKey TypeInTargetAssembly={x:Type MenuItem}, ResourceId=SubmenuItemTemplateKey}}"/>
         <Style.Triggers>
              <!--TODO: Uncomment when needed. We don't need these styles now.--> 
