--- a/Engine/ColorVision.Engine/Services/PhyCameras/InfoPhyCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/InfoPhyCamera.xaml
@@ -66,6 +66,7 @@
                                 <Button Content="校正模板设置" Margin="5" Height="100" Width="180" Command="{Binding CalibrationTemplateOpenCommand}" />
                                 <Button Content="校正模板管理" Margin="5" Height="100" Width="180" Command="{Binding CalibrationEditCommand}"/>
                                 <Button Content="资源组管理" Margin="5" Height="100" Width="180" Command="{Binding ResourceManagerCommand}"/>
+                                <Button Content="修改电机配置" Margin="5" Height="100" Width="180" Command="{Binding UpdateMotorConfigCommand}"/>
                                 <Button Content="配置逻辑相机" Margin="5" Height="100" Width="180" Command="{Binding EditCameraCommand}"/>
                                 <Button Content="配置逻辑校正" Margin="5" Height="100" Width="180" Command="{Binding EditCalibrationCommand}"/>
                                 <Button Content="手册" Margin="5" Height="100" Width="180" Command="{Binding ProductBrochureCommand}"/>
