--- a/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
@@ -231,27 +231,47 @@
                             </Grid>
                         </StackPanel>
                     </StackPanel>
-                    <GroupBox Header="电机操作" Visibility="{Binding Config.MotorConfig.IsUseMotor,Converter={StaticResource bool2VisibilityConverter}}">
-                        <StackPanel Margin="2">
-                            <Button Content="自动聚焦" Click="AutoFocus_Click"  Visibility="{Binding DService.IsVideoOpen,Converter={StaticResource bool2VisibilityConverter1}}" />
-                            <DockPanel Margin="0,2">
-                                <Button  DockPanel.Dock="Right" Content="移动"  Click="Move_Click" />
-                                <CheckBox  x:Name="CheckBoxIsAbs" Content="绝对位置" />
-                                <TextBox x:Name="TextPos" Text="0"  BorderThickness="0,0,0,1" Margin="5,0"/>
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <Button  DockPanel.Dock="Right" Content="MoveDiaphragm"  Click="Move1_Click" />
-                                <TextBlock Text="位置"  Width="40"  />
-                                <TextBox x:Name="TextDiaphragm" Text="0"  BorderThickness="0,0,0,1" Margin="5,0"/>
-                            </DockPanel>
-                            <Button  Margin="0,2" Content="返回原点"  Click="GoHome_Click" />
-                            <DockPanel>
-                                <Button DockPanel.Dock="Right" Content="获取位置"  Click="GetPosition_Click" />
-                                <TextBlock Text="当前位置：" Width="80"/>
-                                <TextBox IsReadOnly="True" Text="{Binding Config.MotorConfig.Position}" Background="Transparent" BorderThickness="0,0,0,0"  Margin="5,0"/>
-                            </DockPanel>
-                        </StackPanel>
-                    </GroupBox>
+                    <StackPanel Margin="2" Visibility="{Binding Config.MotorConfig.IsUseMotor,Converter={StaticResource bool2VisibilityConverter}}">
+                        <DockPanel >
+                            <Button  DockPanel.Dock="Right" Content="自动聚焦" Click="AutoFocus_Click"   />
+                            <Grid Width="20" Margin="5,0" DockPanel.Dock="Right" HorizontalAlignment="Left">
+                                <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}" RenderTransformOrigin="0.5,0.5">
+                                    <TextBlock.RenderTransform>
+                                        <RotateTransform x:Name="rotateTransform10" />
+                                    </TextBlock.RenderTransform>
+                                </TextBlock>
+                                <Button  Width="20" BorderBrush="Transparent" Background="Transparent" BorderThickness="0"  Click="EditAutoFocus">
+                                    <Button.Triggers>
+                                        <EventTrigger RoutedEvent="Button.Click">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <DoubleAnimation Storyboard.TargetName="rotateTransform10" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                    </Button.Triggers>
+                                </Button>
+                            </Grid>
+                            <ComboBox x:Name="ComboxAutoFocus"   d:DataContext="{d:DesignInstance local:DisplayCameraConfig}" SelectedIndex="{Binding AutoFocusTemplateIndex}"  Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value"  DisplayMemberPath="Key" />
+                        </DockPanel>
+                        <DockPanel Margin="0,2">
+                            <Button  DockPanel.Dock="Right" Content="移动"  Click="Move_Click" />
+                            <CheckBox  x:Name="CheckBoxIsAbs" Content="绝对位置" />
+                            <TextBox x:Name="TextPos" Text="0"  BorderThickness="0,0,0,1" Margin="5,0"/>
+                        </DockPanel>
+                        <DockPanel Margin="0,2">
+                            <Button  DockPanel.Dock="Right" Content="MoveDiaphragm"  Click="Move1_Click" />
+                            <TextBlock Text="位置"  Width="40"  />
+                            <TextBox x:Name="TextDiaphragm" Text="0"  BorderThickness="0,0,0,1" Margin="5,0"/>
+                        </DockPanel>
+                        <Button  Margin="0,2" Content="返回原点"  Click="GoHome_Click" />
+                        <DockPanel>
+                            <Button DockPanel.Dock="Right" Content="获取位置"  Click="GetPosition_Click" />
+                            <TextBlock Text="当前位置：" Width="80"/>
+                            <TextBox IsReadOnly="True" Text="{Binding Config.MotorConfig.Position}" Background="Transparent" BorderThickness="0,0,0,0"  Margin="5,0"/>
+                        </DockPanel>
+                    </StackPanel>
+
 
                 </StackPanel>
                 <DockPanel Margin="0,0,0,0" >
