现在属性信息会自动化配置

--- a/Engine/ColorVision.Engine/Services/Devices/Algorithm/EditAlgorithm.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Algorithm/EditAlgorithm.xaml
@@ -16,7 +16,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <ScrollViewer x:Name="EditContent" d:DataContext="{d:DesignInstance local:ConfigAlgorithm}" >
-            <StackPanel>
+            <StackPanel x:Name="EditStackPanel" Margin="5,0">
                 <GroupBox Header="资源信息" Margin="0,5">
                     <StackPanel Margin="5">
                         <DockPanel Margin="0,0,0,5">
@@ -38,23 +38,6 @@
                         <DockPanel Margin="0,2">
                             <TextBlock  Text="色温波长" Width="120"/>
                             <ui:ToggleSwitch IsChecked="{Binding IsCCTWave}"/>
-                        </DockPanel>
-
-                        <DockPanel Margin="0,2">
-                            <TextBlock  Text="数据目录"  Width="120"/>
-                            <TextBox  x:Name="TextBox_CIEImgPath" Text="{Binding FileServerCfg.DataBasePath}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock  Text="端口地址" Width="120"/>
-                            <TextBox  x:Name="TextBox_Endpoint" Text="{Binding FileServerCfg.Endpoint}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock  Text="端口范围" Width="120"/>
-                            <TextBox  x:Name="TextBox_PortRange" Text="{Binding FileServerCfg.PortRange}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="保存天数:" Width="120"/>
-                            <TextBox Text="{Binding FileServerCfg.SaveDays}"/>
                         </DockPanel>
                     </StackPanel>
                 </GroupBox>
