--- a/Engine/ColorVision.Engine/Services/Devices/Motor/EditMotor.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Motor/EditMotor.xaml
@@ -22,7 +22,7 @@
         </Grid.RowDefinitions>
         <ScrollViewer x:Name="EditContent" d:DataContext="{d:DesignInstance local:ConfigMotor}" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
             <Border Background ="{DynamicResource GlobalBackground}" CornerRadius="5">
-                <StackPanel >
+                <StackPanel x:Name="EditStackPanel" Margin="5" >
                     <GroupBox Header="资源信息" Margin="0,5">
                         <StackPanel Margin="5">
                             <DockPanel Margin="0,0,0,5">
@@ -43,68 +43,6 @@
                             </DockPanel>
                         </StackPanel>
                     </GroupBox>
-                    <GroupBox Header="电机配置" Margin="0,5">
-                        <StackPanel Margin="5">
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="电机类型:" Width="120"/>
-                                <ComboBox x:Name="ComboxMotorType"  SelectedValue="{Binding eFOCUSCOMMUN}"  SelectedValuePath="Key"  DisplayMemberPath="Value"  Margin="0,0,0,0"/>
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="串口:" Width="120"/>
-                                <hc:ComboBox  x:Name="TextSerial" IsEditable="True" Text="{Binding SzComName}"  hc:InfoElement.ShowClearButton="True" Margin="0,0,10,0"  />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="波特率:" Width="120"/>
-                                <hc:ComboBox  x:Name="TextBaudRate" IsEditable="True" Text="{Binding BaudRate}"  hc:InfoElement.ShowClearButton="True" Margin="0,0,10,0"  />
-                            </DockPanel>
-                            <DockPanel>
-                                <TextBlock Text="超时时间:" Width="120"/>
-                                <TextBox Text="{Binding dwTimeOut}" />
-                            </DockPanel>
-                        </StackPanel>
-                    </GroupBox>
-
-                    <GroupBox Header="自动聚焦配置">
-                        <StackPanel Margin="5">
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="评价函数类型:" Width="120"/>
-                                <hc:ComboBox x:Name="ComboxeEvaFunc"  SelectedValue="{Binding AutoFocusConfig.EvaFunc}" SelectedValuePath="Key"  DisplayMemberPath="Value"  Margin="0,0,10,0"/>
-                            </DockPanel>
-                            <DockPanel>
-                                <TextBlock Text="超时时间:" Width="120"/>
-                                <TextBox  Text="{Binding AutoFocusConfig.nTimeout}" />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="电机移动区间下限:" Width="120"/>
-                                <TextBox Text="{Binding AutoFocusConfig.MinPosition}" />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="电机移动区间上限:" Width="120"/>
-                                <TextBox Text="{Binding AutoFocusConfig.MaxPosition}" />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="步径摆动范围:" Width="120"/>
-                                <TextBox  Text="{Binding AutoFocusConfig.Forwardparam}" />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="目前使用步径:" Width="120"/>
-                                <TextBox  Text="{Binding AutoFocusConfig.CurStep}" />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="步径每次缩诚系数:" Width="120"/>
-                                <TextBox Text="{Binding AutoFocusConfig.Curtailparam}" />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="停止步径:" Width="120"/>
-                                <TextBox Text="{Binding AutoFocusConfig.StopStep}" />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="最低评价值:" Width="120"/>
-                                <TextBox Text="{Binding AutoFocusConfig.MinValue}" />
-                            </DockPanel>
-                        </StackPanel>
-                    </GroupBox>
-
                 </StackPanel>
             </Border>
         </ScrollViewer>
