--- a/Engine/ColorVision.Engine/Services/WindowDevices.xaml
+++ b/Engine/ColorVision.Engine/Services/WindowDevices.xaml
@@ -69,7 +69,12 @@
                     </Style>
                 </TreeView.ItemContainerStyle>
             </TreeView>
-            <Grid x:Name="StackPanelShow" Grid.Column="1" Margin="0,0,5,0" />
+            <Grid x:Name="StackPanelShow" Grid.Column="1" Margin="0,0,5,0" >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="52*"/>
+                    <RowDefinition Height="85*"/>
+                </Grid.RowDefinitions>
+            </Grid>
         </Grid>
 
         <Border  Grid.Row="2" Margin="5" >
